one more cite on eDSL; fixed ConcHs cite

--- a/content.tex
+++ b/content.tex
@@ -332,7 +332,7 @@ The approach used in Barrelfish is however to create parsers for their languages
 
 
 \paragraph{Embedded domain-specific languages.}
-For the concept of an eDSL see the papers by \citeauthor{hudak1} \cite{hudak1,hudak2}, the 1998 paper describes pure embedding.
+For the concept of an eDSL see the papers by \citeauthor{hudak1} \cite{hudak1,hudak2}, the 1998 paper describes pure embedding.\olcomment{there is this one paper... \cite{Landin:1966:NPL:365230.365257}. Rewrite the previous sentence?}
 The literature on this topic is quite broad, an overview is presented, \eg by \citeauthor{dsl-survey} \cite{dsl-survey}.
 
 The final tagless embedding of DSLs originates from the seminal paper by \citeauthor{final_tagless_embedding} \cite{final_tagless_embedding}.
