--- a/jabref.bib
+++ b/jabref.bib
@@ -3184,8 +3184,8 @@ publisher = theacm,
   publisher = S-V
 }
 
-@INPROCEEDINGS{ConcHs,
-  author = {Simon Peyton~Jones and Andrew Gordon and Sigbjorn Finne},
+@INPROCEEDINGS{ConcHs-,
+  author = {Simon {Peyton~Jones} and Andrew Gordon and Sigbjorn Finne},
   title = {Concurrent {Haskell}},
   booktitle = {Proceedings of POPL '96},
   year = {1996},
@@ -3196,6 +3196,24 @@ publisher = theacm,
   isbn = {0-89791-769-3},
   optlocation = {Florida}
 }
+
+@inproceedings{ConcHs,
+ author = {Peyton Jones, Simon and Gordon, Andrew and Finne, Sigbjorn},
+ title = {Concurrent {Haskell}},
+ booktitle = {Proceedings of the 23rd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+ series = {POPL '96},
+ year = {1996},
+ isbn = {0-89791-769-3},
+ OPTlocation = {St. Petersburg Beach, Florida, United States},
+ pages = {295--308},
+ numpages = {14},
+ OPTurl = {http://doi.acm.org/10.1145/237721.237794},
+ doi = {10.1145/237721.237794},
+ acmid = {237794},
+ publisher = theacm,
+ OPTaddress = {New York, NY, USA},
+} 
+
 
 @BOOKLET{g-m,
   title = {{I}mplementing lazy functional languages on stock hardware: the {S}pineless
@@ -8461,6 +8479,25 @@ year = {2000}
  OPTurl = {http://doi.acm.org/10.1145/91556.91592},
  doi = {10.1145/91556.91592},
  acmid = {91592},
+ publisher = theacm,
+ OPTaddress = {New York, NY, USA},
+} 
+
+@article{Landin:1966:NPL:365230.365257,
+ author = {Landin, P. J.},
+ title = {The next 700 programming languages},
+ journal = {Commun. ACM},
+ issue_date = {March 1966},
+ volume = {9},
+ number = {3},
+ month = mar,
+ year = {1966},
+ issn = {0001-0782},
+ pages = {157--166},
+ numpages = {10},
+ OPTurl = {http://doi.acm.org/10.1145/365230.365257},
+ doi = {10.1145/365230.365257},
+ acmid = {365257},
  publisher = theacm,
  OPTaddress = {New York, NY, USA},
 } 
