Read through the paper

--- a/jabref.bib
+++ b/jabref.bib
@@ -6767,14 +6767,14 @@ keywords = "Events"
   author =	 {Hewitt, Carl and Bishop, Peter and Steiger, Richard},
   title =	 {A universal modular {ACTOR} formalism for artificial
                   intelligence},
-  booktitle =	 {Proceedings of the 3\xrd international joint
-                  conference on Artificial intelligence},
+  booktitle =	 {Proceedings of the 3\xrd International Joint
+                  Conference on Artificial Intelligence},
+  series =	 {IJCAI'73},
   year =	 {1973},
   OPTlocation =	 {Stanford, USA},
   pages =	 {235--245},
   numpages =	 {11},
-  url =
-                  {http://portal.acm.org/citation.cfm?id=1624775.1624804},
+  OPTurl =		 {http://dl.acm.org/citation.cfm?id=1624775.1624804},
   acmid =	 {1624804},
   publisher =	 {Morgan Kaufmann},
   longpublisher ={Morgan Kaufmann Publishers Inc.},
