--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -212,3 +212,15 @@
  OPTaddress = {New York, NY, USA},
  notice = {coroutines}
 } 
+
+@Misc{cmt,
+  OPTkey = 	 {},
+  author =	 {Mario Blazevic},
+  title =	 {The monad-coroutine package. Coroutine monad transformer for suspending and resuming monadic computations},
+  howpublished = {Hackage},
+  OPTmonth = 	 {},
+  year =	 {2012},
+  note =	 {\url{http://hackage.haskell.org/package/monad-coroutine}. Retrieved 23.5.2012},
+  OPTannote = 	 {}
+}
+
